<resources>
    <string name="app_name">Drawing Supporter</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_sync">Sync Google Drive</string>
    <string name="action_user">Select Google User</string>
    <string name="action_sync_file">Sync Data</string>
    <string name="action_upload_file">Upload Data</string>
    <string name="action_upload_camera">Upload By Camera</string>
    <string name="action_upload_gallery">Upload By Gallery</string>
    <string name="action_rename">Rename</string>
    <string name="action_delete">Delete</string>
    <string name="button_back">Back</string>
</resources>
