<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_user"
        android:orderInCategory="100"
        android:title="@string/action_user" />
    <item
        android:id="@+id/action_sync"
        android:orderInCategory="100"
        android:title="@string/action_sync" />
    <item
        android:id="@+id/action_sync_file"
        android:orderInCategory="100"
        android:title="@string/action_sync_file" />
    <item
        android:id="@+id/action_upload_camera"
        android:orderInCategory="100"
        android:title="@string/action_upload_camera" />
    <item
        android:id="@+id/action_upload_gallery"
        android:orderInCategory="100"
        android:title="@string/action_upload_gallery" />
</menu>
